code fixes and finalization